--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="commit">提交</string>
     <string name="hint_event_title">请输入标题</string>
     <string name="hint_event_content">添加事件详情...</string>
-    <string name="edit_description">添加描述</string>
+    <string name="edit_description">编辑描述</string>
     <string name="hint_description_content">添加对他的描述...</string>
     <string name="tab_title_official_things">格物堂</string>
     <string name="login_register">登录/注册</string>
@@ -40,4 +40,7 @@
     <string name="login_welcome">欢迎登陆</string>
     <string name="input_username">手机号码或邮件</string>
     <string name="password">密码</string>
+    <string name="save">保存</string>
+    <string name="cancel">取消</string>
+    <string name="dialog_msg_save_draft">是否保存到草稿？</string>
 </resources>
