--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="save">保存</string>
     <string name="cancel">取消</string>
     <string name="dialog_msg_save_draft">是否保存到草稿？</string>
+    <string name="more">更多</string>
 </resources>
