添加事件功能（还未完全实现）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,6 @@
     <string name="cancel">取消</string>
     <string name="dialog_msg_save_draft">是否保存到草稿？</string>
     <string name="more">更多</string>
+    <string name="tag_event_status">表示跳转编辑事件的TextView的TAG的key，用来表示状态</string>
+    <string name="tag_event_status_id">表示跳转编辑事件的TextView的TAG的key，用来表示id（事件草稿id或是事件id）</string>
 </resources>
