--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -46,4 +46,11 @@
     <string name="tag_event_status">表示跳转编辑事件的TextView的TAG的key，用来表示状态</string>
     <string name="tag_event_status_id">表示跳转编辑事件的TextView的TAG的key，用来表示id（事件草稿id或是事件id）</string>
     <string name="choose_edit_event">事件编辑</string>
+    <string name="edit_account_info">编辑你的昵称和头像</string>
+    <string name="my_creation">我的创作</string>
+    <string name="my_collection">我的收藏</string>
+    <string name="my_care">我的关注</string>
+    <string name="exit_login">退出登录</string>
+    <string name="confirm">确认</string>
+    <string name="exit_login_msg">是否确认退出登录？</string>
 </resources>
