--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="commit_error">提交失败,请重试</string>
     <string name="upload_success">上传成功</string>
     <string name="upload_fail">上传失败</string>
+    <string name="delete">删除</string>
 </resources>
