排查并修复bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="upload_success">上传成功</string>
     <string name="upload_fail">上传失败</string>
     <string name="delete">删除</string>
+    <string name="edit_draft_description">编辑描述草稿</string>
 </resources>
