--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,8 @@
     <string name="upload_fail">上传失败</string>
     <string name="delete">删除</string>
     <string name="edit_draft_description">编辑描述草稿</string>
+    <string name="update_success">更新成功</string>
+    <string name="update_error">更新失败</string>
+    <string name="delete_success">删除成功</string>
+    <string name="delete_error">删除失败</string>
 </resources>
