--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -78,4 +78,5 @@
     <string name="update_error">更新失败</string>
     <string name="delete_success">删除成功</string>
     <string name="delete_error">删除失败</string>
+    <string name="collection">收藏</string>
 </resources>
